<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A36969"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/shopName"
        android:layout_width="0dp"
        android:layout_height="89dp"
        android:layout_marginTop="102dp"
        android:background="#090808"
        android:text="@string/ru_pizzeria"
        android:textAlignment="center"
        android:textColor="#CA1919"
        android:textColorHighlight="#101010"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_pizza"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="100dp"
        android:background="#E1A120"
        android:text="@string/order_pizza"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/shopName" />

    <Button
        android:id="@+id/btn_current"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="100dp"
        android:background="#35A7C8"
        android:text="@string/current_orderMainActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_pizza" />

    <Button
        android:id="@+id/btn_all"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:background="#35A7C8"
        android:text="@string/all_store_orders"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_current" />

</android.support.constraint.ConstraintLayout>